--- a/index.html
+++ b/index.html
@@ -2,3 +2,9 @@
   <h1>一些因为无聊而出现的东西</h1>
   <p>虽然不确定你是怎么意外发现这里的，不过相遇即是缘分，我祝愿你可以完成接下来的目标</p>
 </div>
+<div>
+  <h2>👇</h2>
+  <p><a href="h1啊啊h1.html">①</a>
+    <a href="aaaaa2.0.html">②</a>
+  </p>
+</div>
