--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div>
   <h1>一些因为无聊而出现的东西</h1>
-  <p>虽然不确定你是怎么意外发现这里的，不过相遇即是缘分，我祝愿你可以完成接下来的目标</p>
+  <p>虽然不确定你是怎么意外发现这里的，不过相遇即是缘分，我预感你最近可能会遇到许多好事。祝你一切安好！</p>
 </div>
 <div>
   <h2>👇</h2>
