--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div>
   <h2>👇</h2>
   <p>
-    <a href="h1啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊h1.html">①</a>
+    <a href="啊啊啊啊啊.html">①</a>
     <a href="aaaaa2.0.html">②</a>
   </p>
 </div>
